--- a/sass/layout/portfolio/_portfolio-section.scss
+++ b/sass/layout/portfolio/_portfolio-section.scss
@@ -13,10 +13,14 @@
 // nav-portfolio
 .nav-portfolio {
   @extend %list;
+  display: flex;
+  flex-wrap: wrap;
   margin-bottom: 40px;
+  margin-top: -15px;
+  margin-left: -8px;
 
   @include media-size(min-tablet) {
-    display: flex;
+    // display: flex;
     justify-content: center;
   }
 }
@@ -24,18 +28,8 @@
 // nav-portfolio-item
 .nav-portfolio__item {
   display: inline-block;
-
-  &:not(:nth-last-child(-n + 2)) {
-    @include media-size(tablet-1) {
-      margin-bottom: 15px;
-    }
-  }
-
-  &:not(:nth-child(1)) {
-    @include media-size(min-tablet) {
-      margin-left: 8px;
-    }
-  }
+  margin-top: 15px;
+  margin-left: 8px;
 }
 
 // nav-portfolio__button
